# dvc-fastapi-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
app/: core.py  main.py  models.py  run.py
app/openapi/: openapi.yaml
app/openapi/jinja/: main.jinja2
src/: evaluate.py  load.py  prepare.py  train.py
src/model/: project_model.py  titanic_model.py
src/model/template/: base.py  ludwig.py
