[tool.poetry]
name = "dvc-fastapi-"
version = "0.1.0"
description = ""
authors = ["thomasf <tf@wogra.com>"]

[tool.poetry.dependencies]
python = "~3.8.10"
pandas = "^1.1"
dvc = "^2.0"
scikit-learn = "^0.24.0"
seaborn = "^0.11.2"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"
torch = "1.12.0"
ludwig = "0.5.5"
[tool.poetry.dev-dependencies]
fastapi-code-generator ="^0.2.0"
MarkupSafe = "2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
